#5438 closed defect (fixed)
image2pipe reads two bmp images in one packet
| Reported by: | trebartha | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | bmp regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug: I am piping 241 bmp images to ffmpeg. Image2pipe consistently reads images 00089 & 00090 together in the one packet with the result that 00090 is not sent to the output and a total of only 240 frames are rendered.
How to reproduce: Unzip the attached set of images. Run:
cat render*.bmp | ffmpeg -y -v 9 -loglevel 99 -dump -report -thread_queue_size 100 -f image2pipe -framerate 1 -i - -f null -
This example command doesn't produce any output but the log shows where the problem is. The full log is attached, but I've included this pertinent section which shows that packet with pts 89 was read with precisely double the number of bytes of all of the other packets:
stream #0: keyframe=1 duration=1.000 dts=88.000 pts=88.000 size=3686538 stream #0: keyframe=1 duration=1.000 dts=89.000 pts=89.000 size=7373076 stream #0: keyframe=1 duration=1.000 dts=90.000 pts=90.000 size=3686538
And at the end of the log only 240 packets were read in total:
Input file #0 (pipe:): Input stream #0:0 (video): 240 packets read (888455658 bytes); 240 frames decoded; Total: 240 packets (888455658 bytes) demuxed
(888455658 = 3686538 * 241)
This behaviour is reproducible in the latest 3.0.1 as well as 2.8.6. It does not, however, occur in 2.2.1.
My only recourse is to run that older version but it doesn't have some of the newer features that I require, so I'm stuck at the moment until this can be fixed.
Cheers.
Attachments (3)
Change History (8)
by , 10 years ago
| Attachment: | ffmpeg-20160414-071805.log added |
|---|
by , 10 years ago
| Attachment: | frame_images_for_pipe_input.zip added |
|---|
comment:1 by , 10 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | image2pipe removed |
| Priority: | important → normal |
comment:2 by , 10 years ago
| Reproduced by developer: | set |
|---|---|
| Status: | new → open |
by , 10 years ago
| Attachment: | ffmpeg-20160414-100126.log added |
|---|
comment:3 by , 10 years ago
Yes, I've just pulled the latest git head and reproduced. Please see the latest log attached.
Cheers.
comment:4 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
comment:5 by , 10 years ago
| Keywords: | regression added |
|---|---|
| Priority: | normal → important |
Regression since 3c6d824b80022cc7c098658880b4b5c5778dc965 - related to ticket #3687



Is the issue reproducible with current FFmpeg git head?